# label-selection-layer

./: README.md  download.sh  preprocess.py  print_results.py  pyproject.toml  run.sh
experiments/: labelme_config.yaml  labelme_expr.py  movie_review_config.yaml  movie_review_expr.py  ner_mturk_config.yaml  ner_mturk_expr.py
label_selection_layer/: __init__.py  do_experiment.py  typing.py
label_selection_layer/data_modules/: __init__.py  label_me_data_module.py  movie_reviews_data_module.py  ner_mturk_data_module.py
label_selection_layer/models/label_me_expt/: models.py
label_selection_layer/models/movie_reviews_expt/: __init__.py  models.py
label_selection_layer/models/ner_mturk_expt/: models.py
label_selection_layer/nn_modules/: __init__.py  crowd_layer.py
label_selection_layer/preprocess/: __init__.py  ner_mturk.py
